[gd_scene load_steps=7 format=3 uid="uid://cimfq43jttxtd"]

[ext_resource type="Script" path="res://Game/World/ui.gd" id="1_5cj4o"]
[ext_resource type="Texture2D" uid="uid://23l0370xq34" path="res://Assets/Img/UI/HealthBar-Sheet.png" id="1_5nmxs"]
[ext_resource type="Theme" uid="uid://c7ow58aa04nex" path="res://Themes/StartMenuTheme/StartMenuTheme.tres" id="3_qsv4h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_swgrn"]
atlas = ExtResource("1_5nmxs")
region = Rect2(0, 0, 129, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_qksih"]
atlas = ExtResource("1_5nmxs")
region = Rect2(0, 24, 129, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehnnh"]
atlas = ExtResource("1_5nmxs")
region = Rect2(0, 12, 129, 12)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5cj4o")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 30.0

[node name="HealthBottomBar" type="TextureProgressBar" parent="Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 40.0
texture_under = SubResource("AtlasTexture_swgrn")
texture_progress = SubResource("AtlasTexture_qksih")
metadata/_edit_lock_ = true

[node name="HealthTopBar" type="TextureProgressBar" parent="Health"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 60.0
texture_progress = SubResource("AtlasTexture_qksih")
metadata/_edit_lock_ = true

[node name="Energy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0

[node name="EnergyBottomBar" type="TextureProgressBar" parent="Energy"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 40.0
texture_under = SubResource("AtlasTexture_swgrn")
texture_progress = SubResource("AtlasTexture_ehnnh")
metadata/_edit_lock_ = true

[node name="EnergyTopBar" type="TextureProgressBar" parent="Energy"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 60.0
texture_progress = SubResource("AtlasTexture_ehnnh")
metadata/_edit_lock_ = true

[node name="CreditsLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 140.0
offset_top = 10.0
offset_right = 330.0
offset_bottom = 50.0
theme = ExtResource("3_qsv4h")
text = "Credits: 0"
horizontal_alignment = 1
